# new-train-tracker

./: .env  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.js  Containerfile  Dockerfile  LICENSE  Pipfile  Procfile  README.md  deploy-on-lightsail.yml  deploy.sh  docker-compose.yml  index.html  jest.config.js  last_seen.json  package-lock.json  package.json  pyproject.toml  release.bash  ruff.toml  test.sh  tsconfig.json  tsconfig.test.json  vite.config.ts  wait-for-it.sh  webpack.config.js
.github/: CODEOWNERS  funding.yml  labeler.yml  release-config.json
.github/workflows/: container.yml  deploy.yml  label.yml  lint.yml  release.yml  stale-bot.yml  test.yml
devops/: ansible.yml  cloudformation.json  deploy-on-lightsail.yml  deploy-playbook.yml  deploy.sh  nginx.conf  systemd.conf  tracker-nginx.conf  tracker-supervisor.conf
docs/: LICENSE  README.md
elm/: elm.json
elm/src/: Data.elm  Helpers.elm  Ladder.elm  Main.elm
elm/tests/: LadderTest.elm
history/: create_history_db.py  recent_sightings.py  update_history_db.py  util.py
public/: manifest.json  static_data.json
server/: API.py  Fleet.py  MbtaApi.py  Pipfile  app.py  application.py  background.py  cloudformation.json  fleet.py  healthcheck.py  initial_data.py  last_seen.py  mbta_api.py  routes.py  s3.py  secrets.py  server.py  update_history_db.py  util.py
server/.chalice/: config.json  policy.json
server/chalicelib/: background.py  fleet.py  healthcheck.py  initial_data.py  last_seen.py  mbta_api.py  routes.py  s3.py  secrets.py
server/history/: create_history_db.py  recent_sightings.py  statistics.py  update_history_db.py  (+1 more)
src/: App.css  App.js  constants.ts  index.js  index.tsx  initialData.js  interpolation.js  interpolation.ts  labels.js  labels.tsx  lines.js  lines.ts  main.css  paths.js  paths.ts  prerender.js  prerender.ts  static_data.json  types.ts  useFontsLoaded.js  useMbtaApi.js  useMbtaApi.ts
static/: index.html  main.css  static_data.json  template.html
(+41 files in other folders)
