[project]
name = "new-train-tracker"
version = "2.5.0"
description = "New Train Tracker by TransitMattters"
authors = [{ name = "TransitMatters Labs Team" }]
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = [
    "aiohttp>=3.14.1,<3.15.0",
    "boto3>=1.43.51,<1.44.0",
    "json-api-doc==0.15.0",
    "pytz>=2026.2,<2027.0",
    "schedule==1.2.2",
    "datadog_lambda>=8.126.0,<8.127",
    "tzdata>=2026.3,<2027.0",
]

[dependency-groups]
dev = [
    "chalice==1.33.0",
    "ruff>=0.15.22",
    "pre-commit>=4.6.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
